[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
# SHA-256 hashing — used for block hashing, proof-of-work mining,
# Merkle trees, and deriving compact wallet addresses from public keys.
# Quantum-safe: Grover's Algorithm only halves its effective security
# level to 128 bits, which remains computationally secure.
sha2 = "0.10"

# Hex encoding — converts raw bytes to/from human-readable hex strings.
# Used for displaying hashes, addresses, and cryptographic keys.
hex = "0.4"

# Timestamps — provides the current UTC time when creating new blocks.
chrono = "0.4"

# Serialization — converts Rust structs to/from JSON for saving blocks
# to disk and transmitting messages over the P2P network.
# The "derive" feature auto-generates Serialize/Deserialize for our structs.
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Post-quantum signatures — replaces classical ECDSA (used by Bitcoin).
# CRYSTALS-Dilithium3 is a lattice-based signature scheme standardized
# by NIST in 2024 (FIPS 204). It is resistant to Shor's Algorithm and
# all other known quantum attacks. Security is based on the hardness of
# the Module Learning With Errors (MLWE) lattice problem.
pqcrypto-dilithium = "0.5"
pqcrypto-traits    = "0.3"

# Wallet encryption — AES-256-GCM encrypts private keys before writing
# them to disk. Not broken by quantum computers (Grover's only halves
# AES-256 to AES-128 equivalent, which remains fully secure).
aes-gcm = "0.10"

# Password-based key derivation — PBKDF2-HMAC-SHA256 turns the user's
# password into a 256-bit AES encryption key. 100,000 iterations make
# brute-force guessing computationally expensive.
pbkdf2 = "0.12"

# Cryptographically secure random number generation — used for Dilithium3
# key pair generation and for AES-GCM salts/nonces.
rand = "0.8"

# Async runtime — powers the entire P2P networking layer. "full" enables
# all Tokio features: TCP networking, timers, and async task spawning.
tokio = { version = "1", features = ["full"] }
